[metadata]
name = orglogParser
version = 0.0.5

[options]
packages = orglogParser
install_requires =
    requests
    importlib; python_version == "3.8.6"
  	build==0.3.1.post1
  	certifi==2020.12.5
  	chardet==4.0.0
  	click==8.0.0
  	colorama==0.4.4
  	idna==2.10
 	packaging==20.9
 	pep517==0.10.0
 	Pygments==2.9.0
 	pyparsing==2.4.7
	plotext==2.3.1
 	toml==0.10.2
 	urllib3==1.26.4

[options.entry_points]
console_scripts =
    main=orglogParser:main
